fix z-index with hero and dropdown

--- a/assets/sass/layout/_hero.scss
+++ b/assets/sass/layout/_hero.scss
@@ -11,6 +11,7 @@
     padding-top: calc(15.16667vw + 46.66667px);
     padding-bottom: calc(15.2233vw + 28.64078px);
     max-height: 84vh;
+    z-index: 1;
     svg {
         position: absolute;
         z-index: 2;
